--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "project-managment",
   "version": "1.0.0",
   "description": "TEAM A project in project managment course.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "project": "nodemon index.js",
+    "project": "nodemon src/index.js",
     "test": "mocha tests/*.spec.js --color",
     "lint": "eslint src/*.js --color",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
